--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,5 @@
-/* Empty. Add your own CSS if you like */
-
-.color_blue {
-    color: rgb(56, 126, 245) !important;
-}
-
 .bg_color_blue {
     background-color: rgb(56, 126, 245);
-}
-
-.date_col:hover {
-    background-color: rgba(56, 126, 245, 0.5);
-    cursor: pointer;
 }
 
 .date_col:active {
@@ -19,27 +8,22 @@
 }
 
 .no_padding {
-    padding: 0;
+    padding: 0 !important;
 }
 
 .date_cell {
     padding: 5px;
 }
 
-.error_msg {
-    color: #cc0000 !important;
-    font-size: 12px;
-}
-
-.date_selected {
-    background-color: rgba(56, 126, 245, 1);
-}
-
 .today {
     background-color: rgba(186, 186, 186, 1);
 }
 
+.date_selected {
+    background-color: rgba(56, 126, 245, 0.8);
+}
+
 .pointer_events_none {
     pointer-events: none !important;
-    color: #AAAAAA;
+    color: #AAAAAA !important;
 }
